--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -25,6 +25,14 @@ body {
   height: 95vh;
 }
 
+.force-background {
+  background-color: rgb(236, 236, 235);
+  background-image: url("https://img3.wallspic.com/previews/7/3/4/6/56437/56437-star_wars_el_ltimo_de_los_jedi-x750.jpg");
+  margin: 0;
+  height: 95vh;
+  background-size: cover;
+}
+
 .button_login_darth_vader {
   background-color: rgb(0, 0, 0);
   color: white;
@@ -66,4 +74,33 @@ body {
   font-size: 50px;
   font-family: "Amaranth", sans-serif;
   margin-left: 50px;
+}
+
+.photo {
+  width: 200px;
+  height: auto;
+  border-radius: 10px;
+}
+
+.card_catalog {
+  display: flex;
+  align-items: center;
+  width: 250px;
+  border-radius: 10px;
+  margin: 20px;
+  margin-bottom: 50px;
+}
+
+.back_catalog {
+  background-color: black;
+}
+
+.footer-extras {
+  padding-top: 200px;
+  background-color: rgb(46, 46, 46);
+  border-top: 2px solid rgb(180, 180, 180);
+  width: 100%;
+  bottom: 0;
+  color: white;
+  font-size: 25px;
 }
