changes in models favorites

--- a/src/front/styles/index.scss
+++ b/src/front/styles/index.scss
@@ -49,7 +49,7 @@ html {
   background-color: rgb(236, 236, 235);
   background-image: url("https://img3.wallspic.com/previews/7/3/4/6/56437/56437-star_wars_el_ltimo_de_los_jedi-x750.jpg");
   margin: 0;
-  height: 95vh;
+  height: 90vh;
 }
 
 .button_login_darth_vader {
@@ -91,12 +91,22 @@ html {
 
 .card_catalog {
   display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.125);
   align-items: center;
   width: 250px;
   margin: 20px;
   margin-bottom: 50px;
   color: black;
   text-decoration: none;
+}
+
+.card_catalog_read_like {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 90%;
 }
 
 .card_catalog:hover {
@@ -150,6 +160,36 @@ html {
   color: grey; /* Color del corazón no marcado */
 }
 
+.heart:hover {
+  color: red; /* Color del corazón al pasar el ratón */
+}
+
 .liked {
   color: red; /* Color del corazón marcado */
+}
+
+.myButton {
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  background-color: #ffffff;
+  border-radius: 6px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #666666;
+  font-family: Arial;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 6px 24px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #ffffff;
+  margin-bottom: 15px;
+}
+.myButton:hover {
+  background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+  background-color: #f6f6f6;
+}
+.myButton:active {
+  position: relative;
+  top: 1px;
 }
